--- a/sms-server/package.json
+++ b/sms-server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "sequelize": "^2.0.0-rc1",
     "sequelize-cli": "^1.3.0",
-    "sqlite3": "^3.0.5"
+    "sqlite3": "^3.0.5",
+    "twilio": "^1.11.0"
   }
 }
